--- a/trunk/src/generaledit.ui
+++ b/trunk/src/generaledit.ui
@@ -21,7 +21,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tabSetup">
       <attribute name="title">
@@ -638,7 +638,7 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0,0,1">
        <item row="1" column="2">
-        <widget class="QSpinBox" name="spinBox">
+        <widget class="QSpinBox" name="ana1Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -648,7 +648,7 @@
         </widget>
        </item>
        <item row="1" column="3">
-        <widget class="QSpinBox" name="spinBox_2">
+        <widget class="QSpinBox" name="ana1Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -658,7 +658,7 @@
         </widget>
        </item>
        <item row="1" column="4">
-        <widget class="QSpinBox" name="spinBox_3">
+        <widget class="QSpinBox" name="ana1Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -668,7 +668,7 @@
         </widget>
        </item>
        <item row="2" column="2">
-        <widget class="QSpinBox" name="spinBox_6">
+        <widget class="QSpinBox" name="ana2Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -678,7 +678,7 @@
         </widget>
        </item>
        <item row="2" column="3">
-        <widget class="QSpinBox" name="spinBox_4">
+        <widget class="QSpinBox" name="ana2Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -688,7 +688,7 @@
         </widget>
        </item>
        <item row="2" column="4">
-        <widget class="QSpinBox" name="spinBox_5">
+        <widget class="QSpinBox" name="ana2Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -698,7 +698,7 @@
         </widget>
        </item>
        <item row="3" column="2">
-        <widget class="QSpinBox" name="spinBox_9">
+        <widget class="QSpinBox" name="ana3Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -708,7 +708,7 @@
         </widget>
        </item>
        <item row="3" column="3">
-        <widget class="QSpinBox" name="spinBox_7">
+        <widget class="QSpinBox" name="ana3Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -718,7 +718,7 @@
         </widget>
        </item>
        <item row="3" column="4">
-        <widget class="QSpinBox" name="spinBox_8">
+        <widget class="QSpinBox" name="ana3Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -728,7 +728,7 @@
         </widget>
        </item>
        <item row="4" column="2">
-        <widget class="QSpinBox" name="spinBox_12">
+        <widget class="QSpinBox" name="ana4Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -738,7 +738,7 @@
         </widget>
        </item>
        <item row="4" column="3">
-        <widget class="QSpinBox" name="spinBox_10">
+        <widget class="QSpinBox" name="ana4Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -748,7 +748,7 @@
         </widget>
        </item>
        <item row="4" column="4">
-        <widget class="QSpinBox" name="spinBox_11">
+        <widget class="QSpinBox" name="ana4Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -758,7 +758,7 @@
         </widget>
        </item>
        <item row="5" column="2">
-        <widget class="QSpinBox" name="spinBox_15">
+        <widget class="QSpinBox" name="ana5Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -768,7 +768,7 @@
         </widget>
        </item>
        <item row="5" column="3">
-        <widget class="QSpinBox" name="spinBox_13">
+        <widget class="QSpinBox" name="ana5Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -778,7 +778,7 @@
         </widget>
        </item>
        <item row="5" column="4">
-        <widget class="QSpinBox" name="spinBox_14">
+        <widget class="QSpinBox" name="ana5Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -788,7 +788,7 @@
         </widget>
        </item>
        <item row="6" column="2">
-        <widget class="QSpinBox" name="spinBox_18">
+        <widget class="QSpinBox" name="ana6Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -798,7 +798,7 @@
         </widget>
        </item>
        <item row="6" column="3">
-        <widget class="QSpinBox" name="spinBox_16">
+        <widget class="QSpinBox" name="ana6Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -808,7 +808,7 @@
         </widget>
        </item>
        <item row="6" column="4">
-        <widget class="QSpinBox" name="spinBox_17">
+        <widget class="QSpinBox" name="ana6Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -818,7 +818,7 @@
         </widget>
        </item>
        <item row="7" column="2">
-        <widget class="QSpinBox" name="spinBox_21">
+        <widget class="QSpinBox" name="ana7Neg">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -828,7 +828,7 @@
         </widget>
        </item>
        <item row="7" column="3">
-        <widget class="QSpinBox" name="spinBox_19">
+        <widget class="QSpinBox" name="ana7Mid">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -838,7 +838,7 @@
         </widget>
        </item>
        <item row="7" column="4">
-        <widget class="QSpinBox" name="spinBox_20">
+        <widget class="QSpinBox" name="ana7Pos">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -848,7 +848,7 @@
         </widget>
        </item>
        <item row="11" column="1">
-        <widget class="QSpinBox" name="spinBox_25">
+        <widget class="QSpinBox" name="PPM1">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -858,7 +858,7 @@
         </widget>
        </item>
        <item row="11" column="2">
-        <widget class="QSpinBox" name="spinBox_26">
+        <widget class="QSpinBox" name="PPM2">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -868,7 +868,7 @@
         </widget>
        </item>
        <item row="11" column="3">
-        <widget class="QSpinBox" name="spinBox_27">
+        <widget class="QSpinBox" name="PPM3">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -878,7 +878,7 @@
         </widget>
        </item>
        <item row="11" column="4">
-        <widget class="QSpinBox" name="spinBox_28">
+        <widget class="QSpinBox" name="PPM4">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -888,7 +888,7 @@
         </widget>
        </item>
        <item row="12" column="1">
-        <widget class="QSpinBox" name="spinBox_30">
+        <widget class="QSpinBox" name="PPM5">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -898,7 +898,7 @@
         </widget>
        </item>
        <item row="12" column="2">
-        <widget class="QSpinBox" name="spinBox_31">
+        <widget class="QSpinBox" name="PPM6">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -908,7 +908,7 @@
         </widget>
        </item>
        <item row="12" column="3">
-        <widget class="QSpinBox" name="spinBox_32">
+        <widget class="QSpinBox" name="PPM7">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -918,7 +918,7 @@
         </widget>
        </item>
        <item row="12" column="4">
-        <widget class="QSpinBox" name="spinBox_29">
+        <widget class="QSpinBox" name="PPM8">
          <property name="minimum">
           <number>-9999</number>
          </property>
@@ -1022,7 +1022,7 @@
         </widget>
        </item>
        <item row="8" column="2">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox">
+        <widget class="QDoubleSpinBox" name="battCalib">
          <property name="suffix">
           <string>v</string>
          </property>
